# talenttrust-ai

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_enable_pgvector.py  0002_org_user_audit.py  0003_vacancies.py  0004_candidates_documents_consents.py  0005_scores.py  0006_dossiers.py  0007_decisions.py  0008_audit_candidate_deleted.py
backend/app/: main.py  rbac.py  seed.py
backend/app/api/v1/: auth.py  candidates.py  decisions.py  exports.py  (+6 more)
backend/app/core/: config.py  deps.py  logging.py  security.py
backend/app/db/: base.py  engine.py  session.py  types.py
backend/app/models/: __init__.py  audit_log.py  candidate.py  candidate_document.py  consent.py  decision.py  dossier.py  organization.py  score.py  user.py  vacancy.py
backend/app/providers/: anthropic.py  base.py  factory.py  mock.py  openai.py
backend/app/schemas/: auth.py  candidate.py  decision.py  dossier.py  score.py  user.py  vacancy.py
backend/app/scoring/: components.py  fairness_guard.py  inconsistency_detector.py  weights.py
backend/app/services/: audit_service.py  auth_service.py  candidate_service.py  cv_parser.py  decision_service.py  dossier_service.py  interview_questions.py  report_pdf.py  retention_service.py  scoring_service.py  vacancy_service.py
backend/tests/: conftest.py  cv_fixtures.py  test_auth.py  test_candidates.py  test_cv_parser.py  test_decision.py  test_dossier.py  test_export.py  test_health.py  test_rbac.py  test_retention.py  test_scores_api.py  test_scoring.py  test_vacancies.py
(+33 files in other folders)
